# Wheel-desktop-software

./: .gitignore  CMakeLists.txt  Potentiometer.csv  README.md  Wheel-desktop-software.sln  Wheel-desktop-software.vcxproj  Wheel-desktop-software.vcxproj.filters  libserialcom.c  libserialcom.h  libserialport.lib  main.c  main.cpp
x64/Debug/: libserialport.exp
